--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	background-color:#beffbe;
-	background: url(background.jpg); 
+	background: url(images/background.jpg); 
     background-size: 100%;
     background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -35,6 +35,7 @@ body {
   top: 0px;
   left: 50%;
   margin-left: -450px;
+
 
 
 }
@@ -112,6 +113,31 @@ body {
 
 #content_container a:hover, #content_container a:active {
 	color: #009900;
+}
+
+#slideShow {
+	width:80%;
+	height: 100%;
+ 	position:relative;
+  	margin:0 auto;
+
+}
+.slideShow_image {
+
+	width:100%;
+	height: auto;
+	margin-right: auto;
+    margin-left: auto;
+
+	margin-bottom: 25px;
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
+  position:absolute;
+  left:0;
+opacity: 0;
+z-index: 1;
 }
 
 
